# kan-implementation

./: .gitignore  README.md  pyproject.toml  settings.ini
kan/: core.py
nbks/: core.ipynb  pykan.ipynb
